# EZCP

./: .gitignore  AGENTS.md  ANALYSIS.md  Cargo.toml  README.md  solution1.cpp  template.tex
.github/workflows/: ci.yml  rust.yml
benches/: my_benchmark.rs
examples/: example1.rs  example2.rs
ezcp_macros/: Cargo.toml
ezcp_macros/src/: lib.rs
src/: archiver.rs  cpp_builder.rs  cps_generator.rs  create_tests.rs  error.rs  gcc.rs  input.rs  lib.rs  logger.rs  logger_format.rs  partial_solution.rs  progress_bar.rs  solution.rs  solution_runner.rs  subtask.rs  task.rs  test.rs  timer.cpp  to_output.rs
src/generators/: array.rs  graph.rs  mod.rs
src/runner/: cpp_builder.rs  cpp_runner.rs  exec_runner.rs  gcc.rs  mod.rs  runner.rs  solution_runner.rs  timer.cpp
src/tests/: archiver_tests.rs  array_tests.rs  checker_tests.rs  cpp_runner_tests.rs  dependencies_tests.rs  frankenstein_tests.rs  gcc_tests.rs  generator_tests.rs  generic_tests.rs  graph_tests.rs  input_tests.rs  mod.rs  partial_solution_tests.rs  runner_tests.rs  solution_tests.rs  stack_limit_tests.rs  subtask_tests.rs  test_generator_tests.rs  to_output_tests.rs
