[package]
name = "ezcp"
version = "0.1.0"
edition = "2021"
description = "A simple tool to automatically generate test cases for competitive programming problems."
license-file = "LICENSE"
repository = "https://github.com/Zorz42/EZCP"
keywords = ["cp", "test_data", "framework", "generator"]
categories = ["development-tools"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
termsize = "0.1"
fs_extra = "1.3"
anyhow = { version = "1.0", features = ["std", "backtrace"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false