[package]
name = "ezcp"
version = "0.3.1"
edition = "2021"
description = "A simple tool to automatically generate test cases for competitive programming problems."
license-file = "LICENSE"
repository = "https://github.com/Zorz42/EZCP"
keywords = ["cp", "test_data", "framework", "generator"]
categories = ["development-tools"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
termsize = { version = "0.1", default-features = false }
fs_extra = { version = "1.3", default-features = false }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
anyhow = { version = "1.0", default-features = false, features = ["std", "backtrace"] }
serde = { version = "1.0.197", features = ["derive"] }
snap = { version = "1.1", default-features = false }
bincode = { version = "1.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false